--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,11 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: denoland/setup-deno@v2
+      - uses: cachix/install-nix-action@v25
         with:
-          deno-version: v2.x
-      - run: deno install --allow-scripts
-      - run: deno task build
+          nix_path: nixpkgs=channel:nixos-unstable
+      - name: Build website
+        run: nix build .#default
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
