--- a/package.json
+++ b/package.json
@@ -8,32 +8,32 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"format": "prettier --write .",
-		"lint": "prettier --check . && eslint ."
+		"format": "biome format --write ./src",
+		"lint": "biome lint --write ./src",
+		"postinstall": "bun2nix -o nix/bun.nix"
 	},
 	"dependencies": {
 		"@catppuccin/palette": "^1.7.1",
-		"@indaco/svelte-iconoir": "^7.10.0",
-		"@sveltejs/adapter-static": "^3.0.6",
-		"flowbite": "^2.5.2",
-		"flowbite-svelte": "^0.47.4"
+		"@indaco/svelte-iconoir": "^7.11.1",
+		"@sveltejs/adapter-static": "^3.0.10",
+		"biome": "^0.3.3",
+		"flowbite": "^4.0.1",
+		"flowbite-svelte": "^1.31.0"
 	},
 	"devDependencies": {
-		"@eslint/compat": "^1.2.3",
-		"@fontsource/noto-sans": "^5.1.0",
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.9.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.0",
-		"eslint": "^9.7.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.36.0",
-		"globals": "^15.0.0",
-		"prettier": "^3.3.2",
-		"prettier-plugin-svelte": "^3.2.6",
-		"svelte": "^5.0.0",
-		"svelte-check": "^4.0.0",
-		"typescript": "^5.0.0",
-		"typescript-eslint": "^8.0.0",
-		"vite": "^6.0.0"
+		"@eslint/compat": "^2.0.1",
+		"@fontsource/noto-sans": "^5.2.10",
+		"@sveltejs/adapter-auto": "^7.0.0",
+		"@sveltejs/kit": "^2.49.5",
+		"@sveltejs/vite-plugin-svelte": "^6.2.4",
+		"bun2nix": "^2.0.6",
+		"eslint": "^9.39.2",
+		"eslint-plugin-svelte": "^3.14.0",
+		"globals": "^17.0.0",
+		"svelte": "^5.46.4",
+		"svelte-check": "^4.3.5",
+		"typescript": "^5.9.3",
+		"typescript-eslint": "^8.53.0",
+		"vite": "^7.3.1"
 	}
 }
