--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,25 +1,21 @@
 name: Deploy to GitHub Pages
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - main
+  workflow_call:
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: cachix/install-nix-action@v25
+      - uses: ./.github/workflows/nix.yaml
         with:
-          nix_path: nixpkgs=channel:nixos-unstable
-      - name: Build website
-        run: nix build .#default
+          command: nix build .# -L
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./build
 
   deploy:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     permissions:
       pages: write
       id-token: write
