--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -12,7 +12,7 @@ jobs:
         command:
           - nix flake check -L
 
-    uses: ./.github/workflows/nix.yaml
+    uses: ./.github/workflows/nix.yml
     with:
       command: ${{ matrix.command }}
 
