--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: ./.github/workflows/nix.yaml
+      - uses: ./.github/workflows/nix.yml
         with:
           command: nix build .# -L
       - name: Upload artifact
