--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -42,3 +42,5 @@ jobs:
           purge-last-accessed: 0
           # except any version with the key that is the same as the `primary-key`
           purge-primary-key: never
+
+      - run: ${{ inputs.command }}
