--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,13 +2,18 @@ name: Deploy to GitHub Pages
 on:
   workflow_dispatch:
   workflow_call:
+
 jobs:
   build:
+    uses: ./.github/workflows/nix.yml
+    with:
+      command: nix build .#default -L
+
+  upload:
+    needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: ./.github/workflows/nix.yml
-        with:
-          command: nix build .# -L
+      - uses: actions/checkout@v4
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
@@ -22,7 +27,7 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: build
+    needs: upload
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
