--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,16 +8,7 @@ jobs:
     uses: ./.github/workflows/nix.yml
     with:
       command: nix build .#default -L
-
-  upload:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: ./build
+      upload_path: ./build
 
   deploy:
     permissions:
@@ -27,7 +18,7 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: upload
+    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
