--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -6,6 +6,9 @@ on:
       command:
         required: true
         type: string
+      upload_path:
+        description: "Path to upload as artifact (optional)"
+        type: string
 
 jobs:
   nix:
@@ -23,24 +26,20 @@ jobs:
       - name: Restore and save Nix store
         uses: nix-community/cache-nix-action@v6
         with:
-          # restore and save a cache using this key
           primary-key: nix-${{ runner.os }}
-          # if there's no cache hit, restore a cache by this prefix
           restore-prefixes-first-match: nix-${{ runner.os }}
-          # collect garbage until the Nix store size (in bytes) is at most this number
-          # before trying to save a new cache
-          # 1G = 1073741824
           gc-max-store-size-linux: 5G
-          # do purge caches
           purge: true
-          # purge all versions of the cache
           purge-prefixes: nix-${{ runner.os }}
-          # created more than this number of seconds ago
           purge-created: 0
-          # or, last accessed more than this number of seconds ago
-          # relative to the start of the `Post Restore and save Nix store` phase
           purge-last-accessed: 0
-          # except any version with the key that is the same as the `primary-key`
           purge-primary-key: never
 
-      - run: ${{ inputs.command }}
+      - name: Run command
+        run: ${{ inputs.command }}
+
+      - name: Upload artifact
+        if: inputs.upload_path != ''
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ${{ inputs.upload_path }}
