gh/workflows/deploy: use correct nix build path

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ jobs:
     uses: ./.github/workflows/nix.yml
     with:
       command: nix build .#default -L
-      upload_path: ./build
+      upload_path: ./result
 
   deploy:
     permissions:
